# django_store

./: .dockerignore  .env.example  .env.example-prod  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
app/account/: forms.py  models.py  pipeline.py  tests.py  urls.py  views.py
app/cart/: cart.py  urls.py  views.py
app/catalog/: admin.py  models.py  tests.py  urls.py  views.py
app/catalog/api/: urls.py
app/catalog/api/v1/: filters.py  serializers.py  urls.py  views.py
app/catalog/templatetags/: catalog_tags.py
app/chat/: consumers.py  models.py  tests.py  urls.py  views.py
app/config/: asgi.py  celery.py  settings.py  urls.py
app/order/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
app/store/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
app/store/management/commands/: ensure_adminuser.py
app/templates/: base.html
app/templates/account/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  register.html  register_done.html
app/templates/cart/: cart_detail.html
app/templates/catalog/: product.html  product_brand.html  product_category.html
app/templates/chat/: index.html  room.html
app/templates/order/: create.html
app/templates/store/: contact.html  detail.html  index.html
docker/nginx/: nginx.conf
docker/nginx/conf.d/: django.conf
(+17 files in other folders)
